--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(Split_GPU_Application
                 cs/controller.cpp
                 app/Split_GPU_Application.cpp)
 target_include_directories(Split_GPU_Application PUBLIC "./include/" "/usr/local/cuda/include/")
-target_link_libraries(Split_GPU_Application PUBLIC -pthread)
+target_link_libraries(Split_GPU_Application PUBLIC -pthread -lssl -lcrypto)
 
 add_library(sgcudart SHARED 
             hook/cuda_hook.cpp
@@ -24,12 +24,13 @@ add_library(sgcudart SHARED
 target_include_directories(sgcudart PUBLIC "./include/" "/usr/local/cuda/include/")
 add_custom_command(  
   TARGET sgcudart
+  COMMAND rm libcuda*.so
   COMMAND ln -s  libsgcudart.so libcudart.so
 )
 
 add_executable(test_cuda test/test_cuda.cu)
 target_include_directories(test_cuda PUBLIC "/usr/local/cuda/include/")
-target_link_libraries(test_cuda PUBLIC -lcudart)
+target_link_libraries(test_cuda PUBLIC -lcuda -lcudart)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
